--- a/styles.css
+++ b/styles.css
@@ -51,6 +51,12 @@ h3 {
   font-weight: 450;
   margin-bottom: 0.5em;
 }
+h4 {
+  font-family: 'lato', sans-serif;
+  font-size: 14pt;
+  font-weight: 400;
+  margin-bottom: 0.5em;
+}
 p {
   font-size: 18pt;
   font-weight: 400;
